# EmpiricML

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: dependabot.yml
.github/workflows/: build.yml  bump-version.yml  ci.yml  deploy.yml  publish-pypi.yml  publish-testpypi.yml  quality.yml  release.yml
api/: index.html
api/base/: index.html
api/cv/: index.html
api/data/: index.html
api/errors/: index.html
api/lab/: index.html
api/metrics/: index.html
api/pipeline/: index.html
api/transformers/: index.html
api/wrappers/: index.html
contributing/: index.html
docs/: api.md  contributing.md  examples.md  index.md  install.md
docs/about/: changelog.md  contributing.md  license.md
docs/api/: base.md  core.md  cv.md  data.md  errors.md  lab.md  metrics.md  models.md  pipeline.md  transformers.md  utils.md  wrappers.md
docs/examples/: tutorials.md  use-cases.md
docs/getting-started/: concepts.md  installation.md  quickstart.md
docs/guide/: data-processing.md  evaluation.md  model-training.md  overview.md
examples/: index.html
install/: index.html
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
site/about/changelog/: index.html
site/about/contributing/: index.html
site/about/license/: index.html
site/api/core/: index.html
site/api/models/: index.html
site/api/utils/: index.html
site/examples/tutorials/: index.html
site/examples/use-cases/: index.html
site/getting-started/concepts/: index.html
site/getting-started/installation/: index.html
site/getting-started/quickstart/: index.html
site/guide/data-processing/: index.html
site/guide/evaluation/: index.html
site/guide/model-training/: index.html
site/guide/overview/: index.html
site/search/: search_index.json
src/empml/: base.py  classifiers.py  cv.py  data.py  errors.py  estimators.py  lab.py  lab_utils.py  metrics.py  pipeline.py  pipelines.py  regressors.py  torch.py  transformers.py  utils.py  wrappers.py
tests/: conftest.py  test_lab_multi_metric.py  test_pipeline.py
tests/transformers/: conftest.py  test_binning_ranking.py  test_categorical_encoders.py  test_horizontal_ops.py  test_imputers.py  test_math_transforms.py  test_scalers.py  test_sklearn_based.py  test_target_encoders.py  test_time_series.py
