[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "EmpiricML"
version = "0.2.0"
authors = [
    {name = "Pasquale Trani", email = "ptrani96ds@gmail.com"}
]
description = "Python framework for building robust tabular machine learning models faster and easier"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.26.4",
    "pandas>=2.2.2",
    "pyarrow>=15.0.2",
    "polars>=1.31.0",
    "matplotlib>=3.9.0",
    "scikit-learn>=1.7.1",
    "lightgbm>=4.6.0",
    "xgboost>=3.1.2", 
    "catboost>=1.2.8",
]

[project.optional-dependencies]
torch = [
    "skorch>=1.3.1",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.9.0",
    "mypy>=1.14",
    "build>=1.0",
    "twine>=6.0",
    "bump-my-version>=0.31.0",
]

[project.urls]
"Homepage" = "https://github.com/PasqualeTrani/EmpiricML"
"Bug Tracker" = "https://github.com/PasqualeTrani/EmpiricML/issues"

# ---- Tool configurations ----

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["empml"]

[tool.coverage.report]
show_missing = true
fail_under = 60

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM"]
ignore = [
    "E501",    # line too long (handled by formatter)
    "SIM108",  # ternary operator (readability preference)
    "SIM115",  # context manager for open() - requires refactor
    "B006",    # mutable default arguments - requires API review
    "B008",    # function call in defaults - requires API review
    "B028",    # no stacklevel in warnings - low priority
]

[tool.ruff.lint.isort]
known-first-party = ["empml"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
check_untyped_defs = false

[tool.bumpversion]
current_version = "0.2.0"
commit = true
tag = true
tag_name = "v{new_version}"
commit_message = "bump: version {current_version} -> {new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'